--- a/src/components/MyTodoList/myTodoList.module.css
+++ b/src/components/MyTodoList/myTodoList.module.css
@@ -62,3 +62,18 @@
   opacity: 0;
   pointer-events: none;
 }
+
+.pagination {
+  display: flex;
+  justify-content: center;
+  gap: 10px;
+  margin-top: 30px;
+  padding-bottom: 30px;
+}
+
+.pagination__button {
+  background: teal;
+  padding: 5px;
+  border-radius: 5px;
+  width: 30px;
+}
